--- a/server/recursos/css/black-dashboard.css
+++ b/server/recursos/css/black-dashboard.css
@@ -15,7 +15,7 @@
   --gray-dark: #32325d;
   --light: #ced4da;
   --lighter: #e9ecef;
-  --primary: #e14eca;
+  --primary:#241f1e;
   --secondary: #f4f5f7;
   --success: #00f2c3;
   --info: #1d8cf8;
@@ -166,7 +166,7 @@ sup {
 }
 
 a {
-  color: #e14eca;
+  color:#241f1e;
   text-decoration: none;
   background-color: transparent;
 }
@@ -2641,8 +2641,8 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #ffffff;
-  background-color: #e14eca;
-  border-color: #e14eca;
+  background-color:#241f1e;
+  border-color:#241f1e;
   box-shadow: 0 4px 6px rgba(50, 50, 93, 0.11), 0 1px 3px rgba(0, 0, 0, 0.08);
 }
 
@@ -2660,8 +2660,8 @@ fieldset:disabled a.btn {
 .btn-primary.disabled,
 .btn-primary:disabled {
   color: #ffffff;
-  background-color: #e14eca;
-  border-color: #e14eca;
+  background-color:#241f1e;
+  border-color:#241f1e;
 }
 
 .btn-primary:not(:disabled):not(.disabled):active,
@@ -3108,14 +3108,14 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #e14eca;
-  border-color: #e14eca;
+  color:#241f1e;
+  border-color:#241f1e;
 }
 
 .btn-outline-primary:hover {
   color: #ffffff;
-  background-color: #e14eca;
-  border-color: #e14eca;
+  background-color:#241f1e;
+  border-color:#241f1e;
 }
 
 .btn-outline-primary:focus,
@@ -3125,7 +3125,7 @@ fieldset:disabled a.btn {
 
 .btn-outline-primary.disabled,
 .btn-outline-primary:disabled {
-  color: #e14eca;
+  color:#241f1e;
   background-color: transparent;
 }
 
@@ -3133,8 +3133,8 @@ fieldset:disabled a.btn {
 .btn-outline-primary:not(:disabled):not(.disabled).active,
 .show>.btn-outline-primary.dropdown-toggle {
   color: #ffffff;
-  background-color: #e14eca;
-  border-color: #e14eca;
+  background-color:#241f1e;
+  border-color:#241f1e;
 }
 
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus,
@@ -3541,7 +3541,7 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #e14eca;
+  color:#241f1e;
   text-decoration: none;
 }
 
@@ -3854,7 +3854,7 @@ input[type="button"].btn-block {
 .dropdown-item:active {
   color: #ffffff;
   text-decoration: none;
-  background-color: #e14eca;
+  background-color:#241f1e;
 }
 
 .dropdown-item.disabled,
@@ -4220,8 +4220,8 @@ input[type="button"].btn-block {
 
 .custom-control-input:checked~.custom-control-label::before {
   color: #ffffff;
-  border-color: #e14eca;
-  background-color: #e14eca;
+  border-color:#241f1e;
+  background-color:#241f1e;
   box-shadow: none;
 }
 
@@ -4235,8 +4235,8 @@ input[type="button"].btn-block {
 
 .custom-control-input:not(:disabled):active~.custom-control-label::before {
   color: #ffffff;
-  background-color: #e14eca;
-  border-color: #e14eca;
+  background-color:#241f1e;
+  border-color:#241f1e;
   box-shadow: none;
 }
 
@@ -4288,8 +4288,8 @@ input[type="button"].btn-block {
 }
 
 .custom-checkbox .custom-control-input:indeterminate~.custom-control-label::before {
-  border-color: #e14eca;
-  background-color: #e14eca;
+  border-color:#241f1e;
+  background-color:#241f1e;
   box-shadow: none;
 }
 
@@ -4374,7 +4374,7 @@ input[type="button"].btn-block {
 .custom-select:focus {
   border-color: rgba(50, 151, 211, 0.25);
   outline: 0;
-  box-shadow: inset 0 1px 2px rgba(34, 42, 66, 0.075), 0 0 0 0 #e14eca;
+  box-shadow: inset 0 1px 2px rgba(34, 42, 66, 0.075), 0 0 0 0#241f1e;
 }
 
 .custom-select:focus::-ms-value {
@@ -4514,7 +4514,7 @@ input[type="button"].btn-block {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #e14eca;
+  background-color:#241f1e;
   border: 0;
   border-radius: 1rem;
   box-shadow: 0 0.1rem 0.25rem rgba(34, 42, 66, 0.1);
@@ -4546,7 +4546,7 @@ input[type="button"].btn-block {
 .custom-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #e14eca;
+  background-color:#241f1e;
   border: 0;
   border-radius: 1rem;
   box-shadow: 0 0.1rem 0.25rem rgba(34, 42, 66, 0.1);
@@ -4581,7 +4581,7 @@ input[type="button"].btn-block {
   margin-top: 0;
   margin-right: 0;
   margin-left: 0;
-  background-color: #e14eca;
+  background-color:#241f1e;
   border: 0;
   border-radius: 1rem;
   box-shadow: 0 0.1rem 0.25rem rgba(34, 42, 66, 0.1);
@@ -4725,7 +4725,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show>.nav-link {
   color: #ffffff;
-  background-color: #e14eca;
+  background-color:#241f1e;
 }
 
 .nav-fill .nav-item {
@@ -5467,8 +5467,8 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
   z-index: 1;
   color: #ffffff;
-  background-color: #e14eca;
-  border-color: #e14eca;
+  background-color:#241f1e;
+  border-color:#241f1e;
 }
 
 .page-item.disabled .page-link {
@@ -5552,7 +5552,7 @@ a.badge:focus {
 
 .badge-primary {
   color: #ffffff;
-  background-color: #e14eca;
+  background-color:#241f1e;
 }
 
 a.badge-primary:hover,
@@ -5802,7 +5802,7 @@ a.badge-darker.focus {
 }
 
 .alert-primary {
-  color: #e14eca;
+  color:#241f1e;
   background-color: #e66ad2;
   border-color: #e66ad2;
 }
@@ -5996,7 +5996,7 @@ a.badge-darker.focus {
   color: #ffffff;
   text-align: center;
   white-space: nowrap;
-  background-color: #e14eca;
+  background-color:#241f1e;
   transition: width 0.6s ease;
 }
 
@@ -6086,8 +6086,8 @@ a.badge-darker.focus {
 .list-group-item.active {
   z-index: 2;
   color: #ffffff;
-  background-color: #e14eca;
-  border-color: #e14eca;
+  background-color:#241f1e;
+  border-color:#241f1e;
 }
 
 .list-group-horizontal {
@@ -7199,7 +7199,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #e14eca !important;
+  background-color:#241f1e !important;
 }
 
 a.bg-primary:hover,
@@ -7379,7 +7379,7 @@ button.bg-darker:focus {
 }
 
 .border-primary {
-  border-color: #e14eca !important;
+  border-color:#241f1e !important;
 }
 
 .border-secondary {
@@ -12409,7 +12409,7 @@ button.bg-darker:focus {
 }
 
 .text-primary {
-  color: #e14eca !important;
+  color:#241f1e !important;
 }
 
 a.text-primary:hover,
@@ -13067,14 +13067,14 @@ fieldset[disabled] .navbar .navbar-nav>a.btn.active {
 }
 
 .btn-primary {
-  background: #e14eca;
-  background-image: -webkit-linear-gradient(to bottom left, #e14eca, #ba54f5, #e14eca);
-  background-image: -o-linear-gradient(to bottom left, #e14eca, #ba54f5, #e14eca);
-  background-image: -moz-linear-gradient(to bottom left, #e14eca, #ba54f5, #e14eca);
-  background-image: linear-gradient(to bottom left, #e14eca, #ba54f5, #e14eca);
+  background:#241f1e;
+  background-image: -webkit-linear-gradient(to bottom left,#241f1e, #0a0a0a,#241f1e);
+  background-image: -o-linear-gradient(to bottom left,#241f1e, #0a0a0a,#241f1e);
+  background-image: -moz-linear-gradient(to bottom left,#241f1e, #0a0a0a,#241f1e);
+  background-image: linear-gradient(to bottom left,#241f1e, #0a0a0a,#241f1e);
   background-size: 210% 210%;
   background-position: top right;
-  background-color: #e14eca;
+  background-color:#241f1e;
   transition: all 0.15s ease;
   box-shadow: none;
   color: #ffffff;
@@ -13093,11 +13093,11 @@ fieldset[disabled] .navbar .navbar-nav>a.btn.active {
 .btn-primary:active:hover,
 .btn-primary.active:focus,
 .btn-primary.active:hover {
-  background-color: #ba54f5 !important;
-  background-image: linear-gradient(to bottom left, #e14eca, #ba54f5, #e14eca) !important;
-  background-image: -webkit-linear-gradient(to bottom left, #e14eca, #ba54f5, #e14eca) !important;
-  background-image: -o-linear-gradient(to bottom left, #e14eca, #ba54f5, #e14eca) !important;
-  background-image: -moz-linear-gradient(to bottom left, #e14eca, #ba54f5, #e14eca) !important;
+  background-color: #0a0a0a !important;
+  background-image: linear-gradient(to bottom left,#241f1e, #0a0a0a,#241f1e) !important;
+  background-image: -webkit-linear-gradient(to bottom left,#241f1e, #0a0a0a,#241f1e) !important;
+  background-image: -o-linear-gradient(to bottom left,#241f1e, #0a0a0a,#241f1e) !important;
+  background-image: -moz-linear-gradient(to bottom left,#241f1e, #0a0a0a,#241f1e) !important;
   color: #ffffff;
   box-shadow: none;
 }
@@ -13138,13 +13138,13 @@ fieldset[disabled] .btn-primary:focus,
 fieldset[disabled] .btn-primary.focus,
 fieldset[disabled] .btn-primary:active,
 fieldset[disabled] .btn-primary.active {
-  background-color: #e14eca;
-  border-color: #e14eca;
+  background-color:#241f1e;
+  border-color:#241f1e;
 }
 
 .btn-primary.btn-simple {
-  color: #e14eca;
-  border-color: #e14eca;
+  color:#241f1e;
+  border-color:#241f1e;
   background: transparent;
 }
 
@@ -13152,15 +13152,15 @@ fieldset[disabled] .btn-primary.active {
 .btn-primary.btn-simple:focus,
 .btn-primary.btn-simple:active,
 .btn-primary.btn-simple:not(:disabled):not(.disabled):active {
-  color: #e14eca;
-  border-color: #e14eca;
+  color:#241f1e;
+  border-color:#241f1e;
   background-color: transparent !important;
   background-image: none !important;
   box-shadow: none;
 }
 
 .btn-primary.btn-simple.active {
-  border-color: #e14eca !important;
+  border-color:#241f1e !important;
 }
 
 .btn-primary.btn-simple.active:hover,
@@ -13168,17 +13168,17 @@ fieldset[disabled] .btn-primary.active {
 .btn-primary.btn-simple.active:active,
 .btn-primary.btn-simple.active:not(:disabled):not(.disabled):active {
   color: #ffffff;
-  border-color: #e14eca;
-  background-image: linear-gradient(to bottom left, #e14eca, #ba54f5, #e14eca) !important;
-  background-image: -webkit-linear-gradient(to bottom left, #e14eca, #ba54f5, #e14eca) !important;
-  background-image: -o-linear-gradient(to bottom left, #e14eca, #ba54f5, #e14eca) !important;
-  background-image: -moz-linear-gradient(to bottom left, #e14eca, #ba54f5, #e14eca) !important;
-  background-color: #ba54f5 !important;
+  border-color:#241f1e;
+  background-image: linear-gradient(to bottom left,#241f1e, #0a0a0a,#241f1e) !important;
+  background-image: -webkit-linear-gradient(to bottom left,#241f1e, #0a0a0a,#241f1e) !important;
+  background-image: -o-linear-gradient(to bottom left,#241f1e, #0a0a0a,#241f1e) !important;
+  background-image: -moz-linear-gradient(to bottom left,#241f1e, #0a0a0a,#241f1e) !important;
+  background-color: #0a0a0a !important;
   box-shadow: none;
 }
 
 .btn-primary.btn-link {
-  color: #e14eca;
+  color:#241f1e;
 }
 
 .btn-primary.btn-link:hover,
@@ -13706,7 +13706,7 @@ fieldset[disabled] .btn-danger.active {
   background-color: #ffffff;
   transition: all 0.15s ease;
   box-shadow: none;
-  color: #e14eca;
+  color:#241f1e;
 }
 
 .btn-neutral.animation-on-hover:hover {
@@ -13836,13 +13836,13 @@ fieldset[disabled] .btn-neutral.active {
 .show>.btn-neutral.dropdown-toggle:focus,
 .show>.btn-neutral.dropdown-toggle:hover {
   background-color: #ffffff;
-  color: #ba54f5;
+  color: #0a0a0a;
   box-shadow: none;
 }
 
 .btn-neutral:hover,
 .btn-neutral:focus {
-  color: #ba54f5;
+  color: #0a0a0a;
 }
 
 .btn-neutral:hover:not(.nav-link),
@@ -14684,7 +14684,7 @@ fieldset[disabled] .btn-link.active {
 }
 
 .form-control:focus {
-  border-color: #e14eca;
+  border-color:#241f1e;
   background-color: transparent;
   box-shadow: none;
 }
@@ -14693,7 +14693,7 @@ fieldset[disabled] .btn-link.active {
 .form-control:focus~.input-group-append .input-group-text,
 .form-control:focus+.input-group-prepend .input-group-text,
 .form-control:focus~.input-group-prepend .input-group-text {
-  border: 1px solid #e14eca;
+  border: 1px solid#241f1e;
   border-left: none;
   background-color: transparent;
 }
@@ -15016,7 +15016,7 @@ img {
 }
 
 .modal.modal-primary .modal-content {
-  background-color: #e14eca;
+  background-color:#241f1e;
   color: #ffffff;
 }
 
@@ -15831,7 +15831,7 @@ img {
 }
 
 .navbar.bg-primary {
-  background-color: #e14eca !important;
+  background-color:#241f1e !important;
 }
 
 .navbar.bg-warning {
@@ -16478,13 +16478,13 @@ h6 {
 }
 
 a {
-  color: #ba54f5;
+  color: #0a0a0a;
   font-weight: 300;
 }
 
 a:hover,
 a:focus {
-  color: #e14eca;
+  color:#241f1e;
 }
 
 h1,
@@ -16598,12 +16598,12 @@ p.description {
 }
 
 .blockquote.blockquote-primary {
-  border-color: #e14eca;
-  color: #e14eca;
+  border-color:#241f1e;
+  color:#241f1e;
 }
 
 .blockquote.blockquote-primary small {
-  color: #e14eca;
+  color:#241f1e;
 }
 
 .blockquote.blockquote-danger {
@@ -16664,7 +16664,7 @@ hr {
 }
 
 .table>tbody>tr.table-primary>td {
-  background-color: #e14eca;
+  background-color:#241f1e;
 }
 
 .table>tbody>tr.table-warning>td {
@@ -16882,7 +16882,7 @@ table.tablesorter thead tr .headerSortDown {
 .form-check input[type="checkbox"]:checked+.form-check-sign::before,
 .form-check input[type="checkbox"]:checked+.form-check-sign::before {
   border: none;
-  background-color: #e14eca;
+  background-color:#241f1e;
 }
 
 .form-check .form-check-sign::after {
@@ -16965,15 +16965,15 @@ table.tablesorter thead tr .headerSortDown {
 .form-check-radio input[type="radio"]:checked+.form-check-sign::after {
   width: 6px;
   height: 6px;
-  background-color: #e14eca;
-  border-color: #e14eca;
+  background-color:#241f1e;
+  border-color:#241f1e;
   top: 9px;
   left: 6px;
   opacity: 1;
 }
 
 .form-check-radio input[type="radio"]:checked+.form-check-sign::before {
-  border-color: #e14eca;
+  border-color:#241f1e;
 }
 
 .form-check-radio input[type="radio"]:checked+.form-check-sign::after {
@@ -17319,11 +17319,11 @@ table.tablesorter thead tr .headerSortDown {
 
 .sidebar,
 .off-canvas-sidebar {
-  background: #ba54f5;
-  background: -webkit-linear-gradient(0deg, #ba54f5 0%, #e14eca 100%);
-  background: -o-linear-gradient(0deg, #ba54f5 0%, #e14eca 100%);
-  background: -moz-linear-gradient(0deg, #ba54f5 0%, #e14eca 100%);
-  background: linear-gradient(0deg, #ba54f5 0%, #e14eca 100%);
+  background: #0a0a0a;
+  background: -webkit-linear-gradient(0deg, #0a0a0a 0%,#241f1e 100%);
+  background: -o-linear-gradient(0deg, #0a0a0a 0%,#241f1e 100%);
+  background: -moz-linear-gradient(0deg, #0a0a0a 0%,#241f1e 100%);
+  background: linear-gradient(0deg, #0a0a0a 0%,#241f1e 100%);
   height: calc(100vh - 90px);
   width: 230px;
   position: fixed;
@@ -17787,7 +17787,7 @@ table.tablesorter thead tr .headerSortDown {
   float: right;
   width: 100%;
   min-height: 100vh;
-  border-top: 2px solid #e14eca;
+  border-top: 2px solid#241f1e;
   background: linear-gradient(#1e1e2f, #1e1e24);
   -webkit-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
   -moz-transition: all 0.5s cubic-bezier(0.685, 0.0473, 0.346, 1);
@@ -17805,7 +17805,7 @@ table.tablesorter thead tr .headerSortDown {
 }
 
 .main-panel[data="primary"] {
-  border-top: 2px solid #e14eca;
+  border-top: 2px solid#241f1e;
 }
 
 .main-panel>.content {
@@ -18481,12 +18481,12 @@ a[data-toggle="collapse"][aria-expanded="true"] .caret,
 .bd-docs table .datepicker thead th,
 .bd-docs table .datepicker table thead th,
 .bd-docs table .datepicker .tim-icons {
-  color: #e14eca;
+  color:#241f1e;
 }
 
 .bd-docs .bd-example .picker-switch .tim-icons,
 .bd-docs table .picker-switch .tim-icons {
-  color: #e14eca;
+  color:#241f1e;
 }
 
 .bd-docs .footer .container-fluid>nav {
@@ -18989,9 +18989,9 @@ code {
 .input-group-focus .input-group-prepend .input-group-text,
 .input-group-focus .input-group-append .input-group-text {
   background-color: #ffffff;
-  border-color: #e14eca;
+  border-color:#241f1e;
   background-color: transparent;
-  border-color: #e14eca;
+  border-color:#241f1e;
 }
 
 .input-group-focus.no-border .input-group-prepend .input-group-text,
@@ -19661,7 +19661,7 @@ Copyright (c) 2015 Daniel Eden
 }
 
 .white-content .form-control:focus {
-  border-color: #e14eca;
+  border-color:#241f1e;
 }
 
 .white-content .form-group.no-border .form-control,
@@ -19732,7 +19732,7 @@ Copyright (c) 2015 Daniel Eden
 .white-content .input-group-focus .input-group-prepend .input-group-text,
 .white-content .input-group-focus .input-group-append .input-group-text,
 .white-content .input-group-focus .form-control {
-  border-color: #e14eca;
+  border-color:#241f1e;
 }
 
 .white-content .input-group-focus.no-border .input-group-prepend .input-group-text,
@@ -19918,6 +19918,7 @@ Copyright (c) 2015 Daniel Eden
   border: 0;
   position: relative;
   width: 100%;
+  height: 100%
   margin-bottom: 30px;
   box-shadow: 0 1px 20px 0px rgba(0, 0, 0, 0.1);
 }
@@ -20033,7 +20034,7 @@ Copyright (c) 2015 Daniel Eden
 }
 
 .card.card-white .form-control:focus {
-  border-color: #e14eca;
+  border-color:#241f1e;
 }
 
 .card.card-white label:not(.btn) {
@@ -20109,7 +20110,7 @@ Copyright (c) 2015 Daniel Eden
 .card.card-white .input-group-focus .input-group-append .input-group-text,
 .card.card-white .input-group-focus .form-control {
   background-color: #ffffff;
-  border-color: #e14eca;
+  border-color:#241f1e;
 }
 
 .card.card-white .input-group-focus.no-border .input-group-prepend .input-group-text,
