--- a/server/recursos/css/black-dashboard.css
+++ b/server/recursos/css/black-dashboard.css
@@ -494,7 +494,14 @@ body {
   color: #525f7f;
   text-align: left;
   background-color: #1e1e2f;
+
+ 
 }
+
+
+
+
+
 
 [tabindex="-1"]:focus {
   outline: 0 !important;
@@ -16901,7 +16908,7 @@ h6 {
 }
 
 a {
-  color: #0a0a0a;
+  color: #960a0a;
   font-weight: 300;
 }
 
