--- a/server/recursos/css/black-dashboard.css
+++ b/server/recursos/css/black-dashboard.css
@@ -37,6 +37,57 @@
 }
 
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
+.widget {
+  width: 40%;
+  height: 40%;
+  position: absolute;
+  top: 0;
+  bottom: 50;
+  left:0;
+  right:0;
+  margin: auto;
+}
+.widget p {
+  display: inline-block;
+  line-height: 1em;
+}
+.fecha {
+  font-family: arial;
+  text-align: center;
+  font-size: 1.0em;
+  margin-bottom: 5px;
+  background: rgba(60, 66, 78, 0.233);
+  padding: 5px;
+  width: 100%;
+}
+.reloj {
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  width: 100%;
+  padding: 0px;
+  font-size: 2em;
+  text-align: relative;
+  background: rgba(0,0,0,.5);
+}
+.reloj .cajaSegundos {
+  display: inline-block;  
+}
+.reloj .ampm, .reloj .segundos{
+  display: block;
+  font-size: 2rem;
+}
+
+
+
+
+
+
 .daterangepicker {
   position: absolute;
   color: inherit;
